--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Test source object</title>
+<title>client</title>
 <meta charset="utf-8" />
 <script type="text/javascript">
 	// general variables
@@ -18,7 +18,7 @@
 		});
 		
 		ws.addEventListener("message",function(e){
-			video.src = e.data;
+			video.src =  URL.createObjectURL(e.data);
 		});
 		
 		ws.addEventListener("close",function(){
