--- a/test/src/main/webapp/server.html
+++ b/test/src/main/webapp/server.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Test source object</title>
+<title>Server</title>
 <meta charset="utf-8" />
 <script type="text/javascript">
 	// general variables
@@ -24,7 +24,7 @@
 			video.play();
 		};*/
 		// read from another source
-		const recorder = new MediaRecorder(stream);
+		const recorder = new MediaRecorder(stream,{mimeType : 'audio/ogg'});
 		recorder.ondataavailable = event => {
 			const blob = event.data;
 			ws.send(blob);
