--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -5,32 +5,70 @@
 <script type="text/javascript">
 	// general variables
 	var ws;
-	var video;
+	var audio;
 	//start method
-	function start(){
+	function start() {
 		// defining variables
-		video = document.querySelector("video");
+		audio = document.querySelector("audio");
 		// preparing ws
 		ws = new WebSocket('ws://localhost:8080/test/main');
 		// handle events
-		ws.addEventListener("open",function(){
+		ws.addEventListener("open", function() {
 			console.log("open")
 		});
-		
-		ws.addEventListener("message",function(e){
-			var blob = e.data;
-			blob.type = "audio/ogg";
-			console.log(e.data.type);
+
+		ws.addEventListener("message", function(msg) {
+			var arrayBuffer = msg.data;
+			console.log(arrayBuffer)
+			var bytes = new Uint8Array(arrayBuffer);
+			console.log(bytes)
+			var blob = new Blob([ bytes.buffer ]);
+			console.log(blob)
+
+			var image = document.getElementById('image');
+
+			var reader = new FileReader();
+			reader.onload = function(e) {
+				image.src = e.target.result;
+			};
+			reader.readAsDataURL(blob);
 		});
-		
-		ws.addEventListener("close",function(){
+
+		ws.addEventListener("close", function() {
 			console.log("closed");
 		});
+
+		function encode(input) {
+			var keyStr = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
+			var output = "";
+			var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
+			var i = 0;
+
+			while (i < input.length) {
+				chr1 = input[i++];
+				chr2 = i < input.length ? input[i++] : Number.NaN; // Not sure if the index 
+				chr3 = i < input.length ? input[i++] : Number.NaN; // checks are needed here
+
+				enc1 = chr1 >> 2;
+				enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
+				enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
+				enc4 = chr3 & 63;
+
+				if (isNaN(chr2)) {
+					enc3 = enc4 = 64;
+				} else if (isNaN(chr3)) {
+					enc4 = 64;
+				}
+				output += keyStr.charAt(enc1) + keyStr.charAt(enc2)
+						+ keyStr.charAt(enc3) + keyStr.charAt(enc4);
+			}
+			return output;
+		}
 	}
 </script>
 </head>
 <body onload="start()">
 	<h1>client</h1>
-	<video></video>
+	<audio autoplay="autoplay"></audio>
 </body>
 </html>
