--- a/test/src/main/webapp/server.html
+++ b/test/src/main/webapp/server.html
@@ -19,7 +19,7 @@
 	function read(stream) {
 		// read from current source
 		/*var audio = document.querySelector('audio');
-		audio.srcObject = stream;
+		audio.srcObject = stream;// to use stream
 		audio.onloadedmetadata = function(e) {
 			audio.play();
 		};*/
@@ -38,6 +38,5 @@
 </head>
 <body onload="start()">
 	<h1>server</h1>
-	<audio></audio>
 </body>
 </html>
