--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -1,4 +1,5 @@
 <html>
+<!-- blob.text().then() or blob.arrayBuffer().then() -->
 <head>
 <title>client</title>
 <meta charset="utf-8" />
@@ -18,57 +19,22 @@
 		});
 
 		ws.addEventListener("message", function(msg) {
-			var arrayBuffer = msg.data;
-			console.log(arrayBuffer)
-			var bytes = new Uint8Array(arrayBuffer);
-			console.log(bytes)
-			var blob = new Blob([ bytes.buffer ]);
-			console.log(blob)
-
-			var image = document.getElementById('image');
-
-			var reader = new FileReader();
-			reader.onload = function(e) {
-				image.src = e.target.result;
-			};
-			reader.readAsDataURL(blob);
+			var blob = msg.data;
+		    blob.text().then(str =>{
+		    	audio.pause();
+		    	audio.src = "data:audio/ogg;"+str.replace("Ogg","");
+		    	audio.play();
+		    });
 		});
 
 		ws.addEventListener("close", function() {
 			console.log("closed");
 		});
-
-		function encode(input) {
-			var keyStr = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
-			var output = "";
-			var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
-			var i = 0;
-
-			while (i < input.length) {
-				chr1 = input[i++];
-				chr2 = i < input.length ? input[i++] : Number.NaN; // Not sure if the index 
-				chr3 = i < input.length ? input[i++] : Number.NaN; // checks are needed here
-
-				enc1 = chr1 >> 2;
-				enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
-				enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
-				enc4 = chr3 & 63;
-
-				if (isNaN(chr2)) {
-					enc3 = enc4 = 64;
-				} else if (isNaN(chr3)) {
-					enc4 = 64;
-				}
-				output += keyStr.charAt(enc1) + keyStr.charAt(enc2)
-						+ keyStr.charAt(enc3) + keyStr.charAt(enc4);
-			}
-			return output;
-		}
 	}
 </script>
 </head>
 <body onload="start()">
 	<h1>client</h1>
-	<audio autoplay="autoplay"></audio>
+	<audio></audio>
 </body>
 </html>
