--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -18,66 +18,23 @@
 			console.log("open")
 		});
 
-		ws.addEventListener("message", function(msg) {
+		ws.onmessage = function(msg){
 			var blob = msg.data;
 			
-			var src1,src2;
-			
-			blob.text().then(str=>{
-				audio.src = "data:audio/ogg;"+str;
-				src1 = audio.src1;
+			blob.arrayBuffer().then(arrayBuffer=>{
+				var bytes = new Uint8Array(arrayBuffer);
+				audio.src = "data:audio/ogg;base64;"+btoa(bytes);
 			})
-			
-		    blob.arrayBuffer().then(arrayBuffer=>{
-		    	var bytes = new Uint8Array(arrayBuffer);
-		    	audio.src = "data:audio/ogg;"+encode(bytes);
-		    	src2 = audio.src;
-		    });
-			
-			if(src2!=src1){
-				console.log(src1);
-				console.log(src2)
-				console.log("not same");
-			}else{
-				console.log("same")
-			}
-		});
+		}
 
 		ws.addEventListener("close", function() {
 			console.log("closed");
 		});
-		
-		function encode (input) {
-		    var keyStr = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
-		    var output = "";
-		    var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
-		    var i = 0;
-
-		    while (i < input.length) {
-		        chr1 = input[i++];
-		        chr2 = i < input.length ? input[i++] : Number.NaN; // Not sure if the index 
-		        chr3 = i < input.length ? input[i++] : Number.NaN; // checks are needed here
-
-		        enc1 = chr1 >> 2;
-		        enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
-		        enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
-		        enc4 = chr3 & 63;
-
-		        if (isNaN(chr2)) {
-		            enc3 = enc4 = 64;
-		        } else if (isNaN(chr3)) {
-		            enc4 = 64;
-		        }
-		        output += keyStr.charAt(enc1) + keyStr.charAt(enc2) +
-		                  keyStr.charAt(enc3) + keyStr.charAt(enc4);
-		    }
-		    return output;
-		}
 	}
 </script>
 </head>
 <body onload="start()">
 	<h1>client</h1>
-	<audio></audio>
+	<audio controls="controls"></audio>
 </body>
 </html>
