--- a/test/src/main/webapp/server.html
+++ b/test/src/main/webapp/server.html
@@ -5,6 +5,7 @@
 <script type="text/javascript">
 	// general variables
 	var ws;
+	var array = [];
 	// start method load on startups
 	function start() {
 		// preparing ws
@@ -26,7 +27,8 @@
 		// read from another source
 		const recorder = new MediaRecorder(stream,{mimeType: "audio/ogg"});
 		recorder.ondataavailable = e => {
-			ws.send(e.data);
+			array.push(e.data);
+			play();
 		};
 		recorder.start(1000);
 	}
@@ -34,9 +36,18 @@
 	function error(e) {
 		console.log(e);
 	}
+	
+	function play(){
+		var blob = new Blob(array,{mimeType:"audio/ogg"});
+		var url = URL.createObjectURL(blob);
+		
+		var audio = document.querySelector("audio");
+		audio.src = url;
+	}
 </script>
 </head>
 <body onload="start()">
 	<h1>server</h1>
+	<audio autoplay="autoplay"></audio>
 </body>
 </html>
