remove auto play

--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -43,6 +43,6 @@
 </head>
 <body onload="start()">
 	<h1>client</h1>
-	<audio autoplay="autoplay" onloadeddata="loadedData(this)"></audio>
+	<audio onloadeddata="loadedData(this)"></audio>
 </body>
 </html>
