--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -4,43 +4,47 @@
 <meta charset="utf-8" />
 <script type="text/javascript">
 	// general variables
-	var ws;
+	var ws = new WebSocket('ws://localhost:8080/test/main');
+	var currentTime = 0;
 	var array = [];
+	var audio;
 	// general functions
-	function play(){
+	function play(e){
+		array.push(e);
 		var blob = new Blob(array,{mimeType:"audio/ogg"});
 		var url = URL.createObjectURL(blob);
-		
-		var audio = document.querySelector("audio");
-		var currentTime = audio.currentTime;
+
+		currentTime = audio.currentTime;
 		audio.src = url;
 		audio.currentTime = currentTime;
-		console.log(audio.currentTime)
-		audio.play();
-	}
-	//start method
-	function start() {
-		// preparing ws
-		ws = new WebSocket('ws://localhost:8080/test/main');
-		// handle events
-		ws.addEventListener("open", function() {
-			console.log("open")
-		});
-
-		ws.onmessage = function(msg){
-			var blob = msg.data;
-			array.push(blob);
-			play();
+		if(audio.paused){
+			audio.play();
 		}
+	}
+	
+	function finishAudio(){
+		currentTime = audio.duration;
+	}
+	//start method is called on startup
+	function start() {
+		audio = document.querySelector("audio");
+		// handle events
+		ws.onopen = function() {
+			console.log("open")
+		};
 
-		ws.addEventListener("close", function() {
+		ws.onmessage = function(e){
+			play(e.data);
+		};
+
+		ws.onclose = function() {
 			console.log("closed");
-		});
+		};
 	}
 </script>
 </head>
 <body onload="start()">
 	<h1>client</h1>
-	<audio></audio>
+	<audio onended="finishAudio()"></audio>
 </body>
 </html>
