--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -7,6 +7,7 @@
 	var ws = new WebSocket('ws://localhost:8080/test/main');
 	var isUseDuration = false;
 	var currentTime = 0;
+	var array = [];
 	var audio;
 	// general functions
 	function play(e){
