add comments on client.html

--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -6,70 +6,80 @@
 <meta http-equiv="refresh" content="1">
 <script type="text/javascript">
 	// general variables
-	var ws ;
+	var ws;
 	var isSetCurrentTime = false;
 	var currentTime = 0;
 	var blobTimeDuration = 5;
 	var array = [];
 	var audio;
 	// general functions
-	async function play(e){
-		while(array.length > 1){
+	async function play(e) {// play the blob
+		// remove all indexes except for first one (which include headers very necessary for read)
+		while (array.length > 1) {
 			array.pop();
 		}
+		// push the new blob on it
 		array.push(e)
-		var blob = new Blob(array,{mimeType:"audio/ogg"});
+		// create a blob of our array
+		var blob = new Blob(array, {
+			mimeType : "audio/ogg"
+		});
+		// create a url from our blob
 		var url = URL.createObjectURL(blob);
-
-		if(!isSetCurrentTime){
+		// if previously audio time was not declarared use the current time of audio otherwise use the declrared value 
+		if (!isSetCurrentTime) {
 			currentTime = audio.currentTime;
-		}else{
+		} else {
 			isSetCurrentTime = false;
 		}
+		// set the src
 		audio.src = url;
 	}
-	
-	function loadNewMusic(){
-		if(audio.duration > currentTime){
+	// load when the new music (blob) has been downloaded and metadas set correctly
+	function loadNewMusic() {
+		if (audio.duration > currentTime) {// if auido.length > value-to-set set it otherwise set 0 as default
 			audio.currentTime = currentTime;
-		}else{
+		} else {
 			audio.currentTime = 0;
 		}
-		if(audio.paused){
+		if (audio.paused) {// if the audio player is paused play it
 			audio.play();
 		}
 	}
-	
-	function finishAudio(){
-		currentTime = audio.duration;
-		isSetCurrentTime = true;
+	// load when the audio finish (stream is closed or connection so slow to get new blobs)
+	function finishAudio() {
+		currentTime = audio.duration;// when the audio finished the cursor is going to place 0 but if the finish audio happened because of slow connection and after that we get a blob and our audio length is changed we don't now to start from where and we must play form 0
+		isSetCurrentTime = true;// prevent set default value for audio cursor
 	}
 	//start method is called on startup
 	function start() {
+		// value the general variables
 		ws = new WebSocket('ws://localhost:8080/test/main');
 		audio = document.querySelector("audio");
-		// handle events
-		ws.onopen = function() {
+		// ===================>handle events
+		ws.onopen = function() {// log open when open connection
 			console.log("open")
 		};
 
-		ws.onmessage = function(e){
-			if(typeof e.data === "string"){
-				currentTime = Number(e.data)*blobTimeDuration;
-				isSetCurrentTime = true;
-			}else{
+		ws.onmessage = function(e) {// set audio time or play the blob
+			if (typeof e.data === "string") {// if it is a string set audio time otherwise play the e.data(blob) 
+				currentTime = Number(e.data) * blobTimeDuration;// number-of-received-blobs * every-blob-length
+				isSetCurrentTime = true;// prevent set default value for audio cursor
+			} else {
 				play(e.data);
 			}
 		};
 
-		ws.onclose = function() {
+		ws.onclose = function() {// log close when close connection
 			console.log("closed");
 		};
 	}
 </script>
 </head>
 <body onload="start()">
+	<!-- title -->
 	<h1>client</h1>
+	<!-- audio player -->
 	<audio onended="finishAudio()" onloadedmetadata="loadNewMusic()" controls="controls"></audio>
 </body>
 </html>
