--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -2,8 +2,8 @@
 <head>
 <title>client</title>
 <meta charset="utf-8" />
-<!-- performance also be up to date -->
-<meta http-equiv="refresh" content="1">
+<!-- memory performance also be up to date -->
+<meta http-equiv="refresh" content="300">
 <script type="text/javascript">
 	// general variables
 	var ws;
