remove controlls on client

--- a/test/src/main/webapp/client.html
+++ b/test/src/main/webapp/client.html
@@ -80,6 +80,6 @@
 	<!-- title -->
 	<h1>client</h1>
 	<!-- audio player -->
-	<audio onended="finishAudio()" onloadedmetadata="loadNewMusic()" controls="controls"></audio>
+	<audio onended="finishAudio()" onloadedmetadata="loadNewMusic()"></audio>
 </body>
 </html>
