--- a/test/src/main/webapp/streamer.html
+++ b/test/src/main/webapp/streamer.html
@@ -3,7 +3,7 @@
 <title>Server</title>
 <meta charset="utf-8" />
 <script type="text/javascript">
-	var ws = new WebSocket("ws://localhost:8080/test/main");// to connect to database
+	var ws = new WebSocket("wss://localhost:8443/test/main");// to connect to database
 	var blobTimeDuration = 20;// #depend on client.html
 	var recorder;// to recrod the stream
 	
